--- a/templates/pages/blog.html
+++ b/templates/pages/blog.html
@@ -4,7 +4,7 @@
 
 {% load static %}
 
-<div class="sub-banner overview-bgi">
+<div class="sub-banner-blog overview-bgi">
     <div class="container breadcrumb-area">
         <div class="breadcrumb-areas">
             <h1>Transcript Messages</h1>
@@ -23,7 +23,7 @@
     <div class="container">
         <!-- Main title -->
         <div class="main-title">
-            
+            <h1>Transcript <span>Messages</span></h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
         <div class="row">
