--- a/templates/pages/video_streaming.html
+++ b/templates/pages/video_streaming.html
@@ -22,7 +22,7 @@
         <!-- Main title -->
         <div class="main-title text-center">
             <h1>Live <span>Streaming</span></h1>
-
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
         </div>
         <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-6">
@@ -30,7 +30,7 @@
 
 
                     <div class="detail">
-                        <a href="{% url 'audio_streaming'%}" class="btn btn-lg btn-theme">LISTEN LIVE</a>
+                        <a href="{% url 'audio_streaming'%}" class="btn btn-lg btn-theme">Audio Streaming</a>
 
                     </div>
                 </div>
@@ -43,7 +43,7 @@
 
 
                     <div class="detail">
-                        <a href="{% url 'video_streaming'%}" class="btn btn-lg btn-theme" width="200px" height="100px">WATCH LIVE</a>
+                        <a href="{% url 'video_streaming'%}" class="btn btn-lg btn-theme" width="200px" height="100px">video Streaming</a>
 
                     </div>
                 </div>
